# xf-internal-linker-v2

./: .clang-format  .clang-tidy  .cursorrules  .editorconfig  .env.example  .env.prod.example  .gitignore  AGENT-HANDOFF.md  AGENTS.md  AI-CONTEXT.md  CLAUDE.md  FEATURE-REQUESTS.md  GEMINI.md  PROMPTS.md  SCROLL_HIGHLIGHT_ARCHITECTURE.md  SCROLL_HIGHLIGHT_INTEGRATION.md  SCROLL_HIGHLIGHT_QUICK_START.md  SCROLL_HIGHLIGHT_USAGE.md  docker-compose.prod.yml  docker-compose.yml  docker_cleanup.ps1  docker_compact_vhd.ps1  install_tunnel_autostart.bat  register_cleanup_task.ps1  register_startup_task.ps1  restart.bat  setup_cloudflare_tunnel.ps1  start.bat  start_sync_tunnel.ps1  uninstall_tunnel_autostart.bat
.githooks/: _ensure-git-config-clean.sh  post-checkout  pre-commit  pre-push
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .importlinter  Dockerfile  PYTHON-RULES.md  bandit.yml  conftest.py  mypy.ini  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  schema.yml  test_results.txt  test_webhook.py
backend/benchmarks/: conftest.py  test_bench_anchor_diversity.py  test_bench_content_value_score.py  test_bench_crawl_layer.py  test_bench_embedding_audit.py  test_bench_embedding_bakeoff.py  test_bench_embeddings.py  test_bench_engagement_quality.py  test_bench_eval_layer.py  test_bench_feedback_layer.py  test_bench_feedback_rerank.py  test_bench_fr099_fr105_signals.py  test_bench_graph.py  test_bench_hardware_profile.py  test_bench_misc.py  test_bench_parse_layer.py  test_bench_phase6_helpers.py  test_bench_quality_gate.py  test_bench_ranking_layer.py  test_bench_scoring.py  test_bench_sources_layer.py  test_bench_text.py
backend/config/: __init__.py  asgi.py  catchup.py  catchup_registry.py  celery.py  urls.py  websocket_token_auth.py  wsgi.py
backend/extensions/: CMakeLists.txt  CPP-RULES.md  anchor_descriptiveness.cpp  anchor_diversity.cpp  anchor_self_information.cpp  bench_extensions.py  feedrerank.cpp  fieldrel.cpp  generic_anchor_matcher.cpp  inv_index.cpp  l2norm.cpp  linkparse.cpp  pagerank.cpp  phrasematch.cpp  pulse_metrics.cpp  rareterm.cpp  scoring.cpp  setup.py  simsearch.cpp  strpool.cpp  test_parity_simple.py  texttok.cpp
backend/extensions/benchmarks/: CMakeLists.txt  bench_anchor_diversity.cpp  bench_common.h  bench_feedrerank.cpp  bench_fieldrel.cpp  bench_inv_index.cpp  bench_l2norm.cpp  bench_linkparse.cpp  bench_pagerank.cpp  bench_phrasematch.cpp  bench_pulse_metrics.cpp  bench_rareterm.cpp  bench_scoring.cpp  bench_simsearch.cpp  bench_strpool.cpp  bench_texttok.cpp  test_edges_scoring.cpp  test_edges_simsearch.cpp
backend/extensions/include/: anchor_diversity_core.h  feedrerank_core.h  fieldrel_core.h  inv_index_core.h  l2norm_core.h  linkparse_core.h  pagerank_core.h  phrasematch_core.h  pulse_metrics_core.h  rareterm_core.h  scoring_core.h  simsearch_core.h  strpool_core.h  texttok_core.h
backend/extensions/tests/: test_scoring.cpp  test_simsearch.cpp
backend/scripts/: check_phantom_references.py  deleted_tokens.txt  migrate_v1_to_v2.py  update_spec_checkboxes.py
backend/services/: __init__.py  anchor_extractor.py  distiller.py  embeddings.py  link_parser.py  pipeline.py  ranker.py  sentence_splitter.py  sync.py
docs/: A11Y-HEADINGS-AND-LANDMARKS.md  BUSINESS-LOGIC-CHECKLIST.md  DELETED-FEATURES.md  DEPLOYMENT-BROTLI-AND-EDGE.md  GAP-41-AUDIT.md  GAP-49-AUDIT.md  NATIVE_RUNTIME_POLICY.md  PERFORMANCE.md  RANKING-GATES.md  READY-TODAY.md  REALTIME.md  SOURCEMAP-UPLOAD.md  TESTING.md  UI-AUDIT.md  ui-testing.md  v2-master-plan.md  weight-presets-manual.md
frontend/: .dependency-cruiser.js  .dockerignore  .prettierrc.json  .stylelintrc.json  DESIGN-PATTERNS.md  Dockerfile  Dockerfile.prod  FRONTEND-RULES.md  angular.json  eslint.config.js  karma.conf.cjs  ngsw-config.json  package-lock.json  package.json  playwright.config.ts
nginx/: Dockerfile  maintenance.html  nginx.conf  nginx.prod.conf
postgres/: postgresql.conf
scripts/: build-frontend.ps1  build-native-extensions.ps1  cleanup-host-safe.ps1  dev-tools.ps1  docker-safe.ps1  ensure-git-config-clean.ps1  generate_cpp_specs.py  install-cert-renewal-task.ps1  install-docker-socket-reset-task.ps1  install-nginx-cache-prune-task.ps1  lint-all.ps1  prune-nginx-cache.ps1  prune-verification-artifacts.ps1  renew-dev-cert.ps1  reset-docker-sockets.ps1  setup-dev.ps1  start.ps1  stop.ps1  test-frontend.ps1  test-http-worker.cmd  test-http-worker.ps1  verify.ps1
tmp/: inspect_v1.py  sample_import.jsonl
tools/: run_tunnel_hidden.vbs
(+1842 files in other folders)
